--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-    "API_URL": "http://localhost:3001/ilqna/"
+    "API_URL": "http://localhost:3001/ilqna/", 
+    "BASE_URL": "http://localhost:3000"
 }
