--- a/package.json
+++ b/package.json
@@ -3,24 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.92",
-    "@mui/material": "^5.9.2",
-    "@mui/styles": "^5.9.2",
+    "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "include-media": "^2.0.0",
-    "mui-rte": "^2.0.1",
-    "node-sass": "^7.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "node-sass": "^9.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.15.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
@@ -30,6 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "watch-sass": "node-sass -w ./src/sass/main.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
