--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "watch-sass": "node-sass -w ./src/sass/main.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretty:fix": "prettier --write \"src/**/*.js\" \"src/**/*.json\" \"src/**/*.jsx\" \"src/**/*.css\" \"src/**/*.scss\""
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@locator/runtime": "^0.2.4"
+    "@locator/runtime": "^0.2.4",
+    "prettier": "^3.0.3"
   }
 }
